# clearcut

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  desktop_entry.py  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: deps.py  routes_fs.py  routes_health.py  routes_history.py  routes_jobs.py  routes_providers.py
backend/app/core/: config.py  logging.py
backend/app/pipelines/: engine.py  steps.py
backend/app/providers/: base.py  local_rembg.py  registry.py  remove_bg_api.py  simple_cv_local.py
backend/app/schemas/: common.py  jobs.py  providers.py
backend/app/services/: job_service.py
backend/app/storage/: filesystem.py  history.py  provider_settings.py
backend/app/utils/: file_types.py  naming.py
backend/app/workers/: watch_folder.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  dev-console.tsx  toast-stack.tsx  window-titlebar.tsx
frontend/components/effects/: color-bends.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  index.ts  input.tsx  (+6 more)
frontend/lib/: dev-log.ts  platform.ts
frontend/public/: site.webmanifest
frontend/services/: api.ts
frontend/stores/: use-app-store.ts
frontend/types/: index.ts  modules.d.ts
scripts/: build-backend-sidecar.bat  build-backend-sidecar.py  build-backend-sidecar.sh  dev.bat  dev.sh  docker-down.bat  docker-up.bat  docker-up.sh  prepare-rembg-models.py  tauri-build.bat  tauri-build.sh  tauri-dev.bat  tauri-dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+9 files in other folders)
