[package]
name = "clearcut-desktop"
version = "0.1.0"
description = "Desktop shell for ClearCut"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.2"
tauri-plugin-fs = "2.0.4"
walkdir = "2.5"
