[package]
name = "clearcut-desktop"
version = "0.1.0"
description = "Desktop shell for ClearCut"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.10.3", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
walkdir = "2.5"
