[package]
name = "clearcut-desktop"
version = "0.1.0"
description = "Desktop shell for ClearCut"
authors = ["Lucas Henrique Diniz <lucashdo@protonmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.5", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.4.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.5"
walkdir = "2.5"
